#
# $Id$
#

- Revised nbspradmap to define the gpmap(radinfo,xxx) variables that
  can be used in the radmap.rc script (xx = lat, lon, height, seconds,
  mode, code). Required the introduction of the [-h] option in the
  nbspradmapxxx scripts to distinguish the cases in which the input
  file has the gempak header (e.g., from diagtmos/nexrad) or it doesn't
  (like the tmp files in filter_rad in the rstfilter.lib).
  In the case of the uncompressed files nbspradinfo needs to know
  how much header to skip before looking for the data, and this option
  is needed to determine the size of the header.

- Added -s option to logrotate in scheduler.conf-generic so that
  logrotate can write its status file in a directory that is
  writable by the "noaaport" user.

- Added "Bytes Ranges" header handling capability in tclhttpd, to support
  the IDV catalogs.

- Added support for IDV catalogs to tclhttpd in the form of the
  catalog "extension".

- Added permament archive to the metarfilter (in archive.conf).

- Added hostname to the <head><title> tag in the main index file,
  which is now a tml tamplate file. The same change was made in
  npemwin y npstats.

- Revised the craftinsert script to set the umask before creating the
  subdirectories and the data file in the spool directory (that now
  requires tclx).