@@ -173,7 +173,7 @@ set common(cspoolbdbconf) [file join $common(confdir) "cspoolbdb.conf"];
 # If this variable to 1 the filters (using the functions in filters.lib) will
 # try to fire up as many processes in parallel as they can when they are
 # processing data files. It is generally a good idea to set it in
-# multiprocessor machines, but not recommended in uniprocessor ones.
+# multiprocessor machines.
 #
 set filterslib(background_processing) 0;
 
