@@ -217,7 +217,7 @@ static void process_file(void){
   int nread, nwrite;
   int data_start;
 
-  g.input_fp = fopen(g.opt_input_fname, "r");
+  g.input_fp = fopen_input(g.opt_input_fname);
   if(g.input_fp == NULL){
     log_errn_open(g.opt_input_fname);
     return;
@@ -225,9 +225,9 @@ static void process_file(void){
 
   if(g.opt_output_fname != NULL){
     if(g.opt_append == 0)
-      g.output_fp = fopen(g.opt_output_fname, "w");
+      g.output_fp = fopen_output(g.opt_output_fname, "w");
     else
-      g.output_fp = fopen(g.opt_output_fname, "a");
+      g.output_fp = fopen_output(g.opt_output_fname, "a");
     
     if(g.output_fp == NULL){
       log_errn_open(g.opt_output_fname);
